--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,9 @@ jobs:
 
   # This workflow contains a single job called "deploy-dev"
   deploy-dev:
+    # What job to wait for to finish
+    needs: build
+    
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
